--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,4 +49,20 @@
     padding-left: 0;
   }
   
+  .count {
+    height: 30px;
+    width: 30px;
+    display: inline-flex;
+    top: 0;
+    margin-left:-20px;
+    transform: translate(-50%, -50%);
+    background-color: #fa0000;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-size: 16px;
+    border-radius: 400px;
+    transition: all ease 1s;
+    z-index: 1;
+  }
  
